--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "chart.js": "^3.3.2",
     "firebase": "^8.6.2",
     "node": "^16.3.0",
     "node-sass": "^6.0.0",
     "react": "^17.0.2",
+    "react-chartjs-2": "^3.0.3",
     "react-dom": "^17.0.2",
     "react-loading": "^2.0.3",
     "react-paginate": "^7.1.3",
