--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-chartjs-2": "^3.0.3",
     "react-dom": "^17.0.2",
     "react-loading": "^2.0.3",
+    "react-loading-skeleton": "^2.2.0",
     "react-loadingg": "^1.7.2",
     "react-paginate": "^7.1.3",
     "react-router-dom": "^5.2.0",
