--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^17.0.2",
     "react-chartjs-2": "^3.0.3",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
     "react-loading": "^2.0.3",
     "react-loading-skeleton": "^2.2.0",
     "react-loadingg": "^1.7.2",
