--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-firebase
-node-sass
-react-loading
-react-paginate
-react-router-dom
+# firebase===8.6.2
+# node-sass
+# react-loading
+# react-paginate
+# react-router-dom
