--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-paginate": "^7.1.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "recoil": "^0.3.1",
     "sass": "^1.35.1",
     "web-vitals": "^1.0.1"
   },
