--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "node": "^16.3.0",
     "node-sass": "^6.0.0",
     "react": "^17.0.2",
+    "react-animated-text": "^0.1.4",
     "react-chartjs-2": "^3.0.3",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
