--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.2.0",
+    "react-infinite-scroller": "^1.2.4",
     "react-loading": "^2.0.3",
     "react-loading-skeleton": "^2.2.0",
     "react-loadingg": "^1.7.2",
     "react-paginate": "^7.1.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-tiny-fab": "^4.0.3",
     "recoil": "^0.3.1",
     "sass": "^1.35.1",
     "web-vitals": "^1.0.1"
