--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-helmet": "^6.1.0",
     "react-icons": "^4.2.0",
     "react-infinite-scroller": "^1.2.4",
+    "react-loader-spinner": "^4.0.0",
     "react-loading": "^2.0.3",
     "react-loading-skeleton": "^2.2.0",
     "react-loadingg": "^1.7.2",
