--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.58",
     "chart.js": "^3.5.0",
-    "firebase": "^8.9.1",
+    "firebase": "9.0.0-beta.7",
     "node": "^16.3.0",
     "react": "^17.0.2",
     "react-animated-text": "^0.1.4",
